application handler now knows which application will run under which domain

--- a/conf/applications.properties
+++ b/conf/applications.properties
@@ -1,7 +1,13 @@
-#here are the application descriptions, "longest prefix match" applies
-#defaul application definition
-default.application=/fkksc
-#first evaluate with full URL/URI
-/fkksc=dir
-/fkksc.reloadForEveryRequest=true
-/fkksc.dir=dir:///Users/alicanmogol/projects/fkksc-app/|com.fkksc.app.FKKSC
+#here are the domain names
+domains=localhost,fererlab.com,acmbay.com
+fererlab.com.applications=cms,sample
+fererlab.com.default=cms
+acmbay.com.applications=cms
+acmbay.com.default=cms,sample
+#here are the application descriptions
+sample=dir
+sample.reloadForEveryRequest=true
+sample.dir=dir:///tmp/Users/alicanmogol/projects/bucket-server-and-SampleApplication/bucket-apps/SampleApplication|com.sample.app.SampleApplication
+cms=dir
+cms.reloadForEveryRequest=true
+cms.dir=dir:///tmp/Users/alicanmogol/projects/bucket-server-and-SampleApplication/bucket-apps/SampleApplication|com.sample.app.SampleApplication
